# dt_durability

./: IMPLEMENTATION_SUMMARY.md  INSTALL_GUIDE.md  README.md  arduino_controller.py  cnc_control.py  cnc_controller_rotate_3_linux.py  cnc_controller_rotate_linux.py  cnc_durability.py  cnc_durability_ros.py  durability_tester.py  grbl_controller.py  install_ros2.sh  launch_durability_ros.py  package.xml  test_____.py
durability_test/trial_11/: data_log.csv
durability_test/trial_12/: data_log.csv
durability_test/trial_14/: data_log.csv
durability_test/trial_15/: data_log.csv
durability_test/trial_18/: data_log.csv
durability_test/trial_19/: data_log.csv
durability_test/trial_20/: data_log.csv
durability_test/trial_21/: data_log.csv
durability_test/trial_22/: data_log.csv
durability_test/trial_27/: data_log.csv
durability_test/trial_48/: data_log.csv
durability_test/trial_6/: data_log.csv
~/Documents/ankush/durability_test/trial_1/: data_log.csv
~/ankush/durability_test/trial_1/: data_log.csv
